argocd/applications/dev/servarr/qbittorrent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-qbittorrent
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
