argocd/applications/dev/servarr/qbittorrent/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik

  hostnames:
    - torrents-dev.kube.squatch.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dev-qbittorrent
          port: 8080
